modified:   Readme.md 	deleted:    app/(post)/2014/7-principles-of-rich-web-applications/page.mdx 	deleted:    app/(post)/2015/ecmascript-6/page.mdx 	deleted:    app/(post)/2015/pure-ui/demo.css 	deleted:    app/(post)/2015/pure-ui/demo.tsx 	deleted:    app/(post)/2015/pure-ui/page.mdx 	deleted:    app/(post)/2016/addressable-errors/page.mdx 	deleted:    app/(post)/2017/2016-in-review/page.mdx 	deleted:    app/(post)/2017/its-hard-to-forego-efficiency/page.mdx 	deleted:    app/(post)/2020/2019-in-review/page.mdx 	deleted:    app/(post)/2020/an-ode-to-code-golf/demo.tsx 	deleted:    app/(post)/2020/an-ode-to-code-golf/page.mdx 	deleted:    app/(post)/2020/books-people-reread/books.tsx 	deleted:    app/(post)/2020/books-people-reread/notion.ts 	deleted:    app/(post)/2020/books-people-reread/page.mdx 	deleted:    app/(post)/2020/develop-preview-test/page.mdx 	deleted:    app/(post)/2020/next-for-vercel/page.mdx 	deleted:    app/(post)/2020/static-hoisting/diagram.tsx 	deleted:    app/(post)/2020/static-hoisting/page.mdx 	deleted:    app/(post)/2020/vercel/page.mdx 	deleted:    app/(post)/2021/making-the-web-faster/page.mdx 	modified:   app/(post)/header.tsx 	deleted:    app/(post)/ja/2020/vercel/page.mdx 	modified:   app/(post)/og/[id]/route.tsx 	modified:   app/about/opengraph-image.tsx 	modified:   app/about/page.mdx 	modified:   app/atom/route.ts 	modified:   app/footer.tsx 	modified:   app/header.tsx 	modified:   app/icon.png 	modified:   app/layout.tsx 	modified:   app/links/[id]/head.tsx 	modified:   app/logo.tsx 	modified:   app/opengraph-image.tsx 	modified:   app/posts.json 	modified:   package.json 	modified:   pnpm-lock.yaml 	deleted:    public/csscss.html 	deleted:    public/images/2016-in-review/ePCBk5ZmYM.png 	deleted:    public/images/2016-in-review/hyperapp.gif 	deleted:    public/images/2016-in-review/i2q5apnEho.jpg 	deleted:    public/images/2016-in-review/mVLV4CAcnm.jpg 	deleted:    public/images/2016-in-review/thoughtcomplete.gif 	deleted:    publi

--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "rauchg-blog",
   "license": "MIT",
-  "description": "rauchg.com (blog)",
+  "description": "blog.jackey.love (blog)",
   "dependencies": {
     "@fontsource/inter": "^4.5.15",
+    "@fontsource/jetbrains-mono": "^5.0.19",
     "@fontsource/roboto-mono": "^4.5.10",
     "@mdx-js/react": "^2.3.0",
     "@next/mdx": "13.1.7-canary.10",
